# vector-neural-networks

./: LICENSE  README.md  pyproject.toml
tests/: test_layers.py
vector_neural_networks/: layers.py
