[tool.poetry]
name = "vector-neural-networks"
version = "0.1.0"
description = ""
authors = ["jloveric <john.loverich@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vector_neural_networks"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
